Bug 439986 - Maximized windows does not follow cursor.
Summary: Maximized windows does not follow cursor.
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.22.3
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-17 22:42 UTC by Ondřej Niesner
Modified: 2023-12-12 17:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ondřej Niesner 2021-07-17 22:42:17 UTC
SUMMARY
Windows that were closed as maximized does not open on monitor where cursor is located. Window opens on most left monitor.

STEPS TO REPRODUCE
1. Maximize window


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro
(available in About System)
KDE Plasma Version: 5.22.3
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-08-03 16:50:29 UTC
Do you have KWin set up to open windows on the screen where the cursor is located? The setting is in System Settings > Window Management > Window Behavior.
Comment 2 Ondřej Niesner 2021-08-07 23:13:55 UTC
It's checked. It works fine until I close for example dolphin as maximized. Than it will open maximized but on my left monitor even cursor is on right. Unmaximizing dolphin will switch from maximized mode to "normal" window but it's still maximized because it does not remember unmaximized state.

I think this is related to https://bugs.kde.org/show_bug.cgi?id=437089
Comment 3 Nate Graham 2021-08-09 15:46:14 UTC
OK, thanks.
Comment 4 Bug Janitor Service 2021-09-05 01:48:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1379
Comment 5 Zamundaaa 2021-10-04 09:40:24 UTC
Git commit ef894f34eb660c5cc0efb98dd55f58c96177cf5b by Xaver Hugl.
Committed on 04/10/2021 at 09:39.
Pushed by zamundaaa into branch 'master'.

xdgshellclient: fix initial placement with maximize

M  +1    -1    src/workspace.cpp
M  +1    -0    src/xdgshellclient.cpp

https://invent.kde.org/plasma/kwin/commit/ef894f34eb660c5cc0efb98dd55f58c96177cf5b
Comment 6 Zamundaaa 2021-10-04 09:40:53 UTC
Git commit 7caef067ac9c85dc5059f72090dd3420893dc9f5 by Xaver Hugl.
Committed on 04/10/2021 at 09:40.
Pushed by zamundaaa into branch 'Plasma/5.23'.

xdgshellclient: fix initial placement with maximize


(cherry picked from commit ef894f34eb660c5cc0efb98dd55f58c96177cf5b)

M  +1    -1    src/workspace.cpp
M  +1    -0    src/xdgshellclient.cpp

https://invent.kde.org/plasma/kwin/commit/7caef067ac9c85dc5059f72090dd3420893dc9f5
Comment 7 Anton K 2021-10-17 22:27:46 UTC
This correction could not cause this problem (https://bugs.kde.org/show_bug.cgi?id=443922)? 

I do not know how it was before. 

Operating System: KDE neon 5.23
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3