xdgshellclient: fix initial placement with maximize

BUG: 439986


(cherry picked from commit ef894f34eb660c5cc0efb98dd55f58c96177cf5b)